Replaced Windows twisties by SVG equivalents

--- a/trace/FBTrace/chrome/skin/classic/win/panel.css
+++ b/trace/FBTrace/chrome/skin/classic/win/panel.css
@@ -17,7 +17,7 @@
 .breakpointHeader > .twisty,
 .computedStyle.hasSelectors > .stylePropName,
 .cookieRow > .cookieNameCol > .cookieNameLabel {
-    background-image: url(chrome://firebug/skin/win/twistyClosed.png);
+    background-image: url(chrome://fbtrace/skin/win/twistyClosed.svg);
     background-repeat: no-repeat;
     background-position: 2px 2px;
     min-height: 12px;
@@ -38,7 +38,7 @@
 .breakpointBlock.opened > .breakpointHeader > .twisty,
 .computedStyle.hasSelectors.opened > .stylePropName,
 .cookieRow.opened > .cookieNameCol > .cookieNameLabel {
-    background-image: url(chrome://firebug/skin/win/twistyOpen.png);
+    background-image: url(chrome://fbtrace/skin/win/twistyOpen.svg);
 }
 
 .twisty {
