--- a/trace/FBTrace/chrome/skin/classic/traceConsole.css
+++ b/trace/FBTrace/chrome/skin/classic/traceConsole.css
@@ -102,7 +102,7 @@
 }
 
 .messageRow .messageNameLabel {
-    background-image: url(chrome://fbtrace-os/skin/twistyClosed.png);
+    background-image: url(chrome://fbtrace-os/skin/twistyClosed.svg);
     background-repeat: no-repeat;
     background-position: 2px 2px;
 }
@@ -114,7 +114,7 @@
 }
 
 /*.messageRow */.opened > .messageCol > .messageNameLabel {
-    background-image: url(chrome://fbtrace-os/skin/twistyOpen.png);
+    background-image: url(chrome://fbtrace-os/skin/twistyOpen.svg);
 }
 
 /************************************************************************************************/
