--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -178,7 +178,7 @@ panelTab > panelTabMenu .menuTarget {
 
 panelTab[selected="true"] > panelTabMenu .menuTarget,
 panelTab:focus > panelTabMenu .menuTarget {
-    background: url(chrome://firebug/skin/tabMenuTarget.png) no-repeat center;
+    background: url(chrome://firebug-os/skin/optionsMenuTarget.svg) no-repeat center;
     width: 11px;
     height: 10px;
     vertical-align: middle;
@@ -186,7 +186,11 @@ panelTab:focus > panelTabMenu .menuTarget {
 }
 
 panelTab[selected="true"]:hover > panelTabMenu .menuTarget {
-    background: url(chrome://firebug/skin/tabMenuTargetHover.png) no-repeat center;
+    background: url(chrome://firebug-os/skin/optionsMenuTargetHover.svg) no-repeat center;
+}
+
+panelTab[selected="true"]:hover:active > panelTabMenu .menuTarget {
+    filter: url(chrome://firebug/skin/filters.svg#darken);
 }
 
 panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
