--- a/extension/skin/classic/codemirror-firebug.css
+++ b/extension/skin/classic/codemirror-firebug.css
@@ -162,6 +162,17 @@
 /************************************************************************************************/
 /* Debug Location */
 
+.cm-s-firebug .CodeMirror-debugLocation .CodeMirror-gutter-elt .debugLocation {
+    background-image: url(chrome://firebug/skin/executionPointer.svg);
+    color: #000000;
+    background-repeat: no-repeat;
+    padding: 7px;
+}
+
+.cm-s-firebug .CodeMirror-debugLocation .CodeMirror-gutter-elt .breakpoint {
+    background-image: url(chrome://firebug/skin/executionPointer.svg), url(chrome://firebug/skin/breakpoint.svg);
+}
+
 .cm-s-firebug .CodeMirror-debugLocation {
     outline: 1px solid #D9D9B6;
     background-color: lightgoldenrodyellow;
