Issue 6432 (Long string properties don't allow to set a breakpoint for them) http://code.google.com/p/fbug/issues/detail?id=6432

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -90,7 +90,8 @@
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-.memberRow.hasChildren > .memberLabelCell > .memberLabel:hover {
+.memberRow.hasChildren > .memberLabelCell > .memberLabel:hover,
+.memberRow.cropped > .memberLabelCell > .memberLabel:hover {
     cursor: pointer;
     color: blue;
     text-decoration: underline;
