Make QuickInfoBox a separate module (preparation for issue 5720)

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -107,7 +107,7 @@ panelBar {
     -moz-box-orient: vertical;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 
 panelStatus {
     -moz-binding: url("firefox/bindings.xml#panelStatus");
@@ -117,7 +117,7 @@ panelStatus {
     -moz-binding: url("firefox/bindings.xml#panelStatus");
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Location List */
 
 #fbLocationList {
@@ -141,7 +141,7 @@ panelStatus {
     color: black;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 
 #fbStatusText {
     visibility: collapse;
@@ -165,7 +165,7 @@ panelTab[highlight="true"] {
     color: #FF9933;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Mini-menu on the panel tab */
 
 panelTabMenu {
@@ -197,14 +197,14 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     direction: rtl;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Detached Firebug Window */
 
 #fbResumeBox > #fbWindowButtons {
     padding-right: 4px;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Focus related */
 
 /* Make the following selectors part of the tab order */
@@ -259,7 +259,7 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
 }
 /**** end focus related ****/
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* panelFileList */
 
 .toolbarbutton-text.title[value] {
@@ -284,14 +284,14 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     color: #000000;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* CSS Buttons */
 
 #fbScriptFilterMenu .toolbarbutton-text {
     color: #000000;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Script Buttons */
 
 #fbToggleCSSEditing .toolbarbutton-text {
@@ -301,7 +301,7 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     color: #000000;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Quick Info Box */
 
 #fbQuickInfoPanel {
@@ -337,7 +337,7 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     cursor: move;
 }
 
-/***********************************************************************************************/
+/*************************************************************************************************/
 /* Don't let Personas to destroy Firebug's CSS */
 
 #fbContentBox:-moz-lwtheme {
@@ -345,7 +345,7 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     color: -moz-dialogtext;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 
 @keyframes armedBlinking {
     100% {
@@ -367,7 +367,7 @@ panelTab[aria-disabled='true'] {
     color: graytext !important;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Scrollable TabBar + TabList */
 
 panelBarArrowscrollbox {
@@ -382,7 +382,7 @@ panelBarTabList {
     -moz-binding: url("firefox/bindings.xml#panelBarTabListMenuItem");
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* splitmenu */
 
 menuitem.split-menuitem-item[_moz-menuactive="true"], .split-menu-right-image[_moz-menuactive="true"] {
