--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -182,7 +182,7 @@
     background-repeat: no-repeat;
     border-style: solid;
     border-width: 19px 25px 33px 33px;
-    -moz-border-image: url(chrome://firebug/skin/mac/breakpointConditionEditor.svg) 19 25 33 33 stretch;
+    border-image: url(chrome://firebug/skin/mac/breakpointConditionEditor.svg) 19 25 33 33 stretch;
 }
 
 .conditionCaption {
@@ -206,7 +206,7 @@
 
 .upsideDown {
     border-width: 28px 25px 19px 33px;
-    -moz-border-image: url(chrome://firebug/skin/mac/breakpointConditionEditorDown.svg) 28 25 19 33 stretch;
+    border-image: url(chrome://firebug/skin/mac/breakpointConditionEditorDown.svg) 28 25 19 33 stretch;
 }
 
 /************************************************************************************************/
