--- a/extension/skin/classic/timeInfoTip.css
+++ b/extension/skin/classic/timeInfoTip.css
@@ -4,7 +4,7 @@
 /* Time Info tip */
 
 .timeInfoTip {
-    width: 200px;
+    width: 100%;
     padding: 5px;
 }
 
@@ -24,7 +24,7 @@
 .timeInfoTipBox {
     position: relative;
     height: 17px;
-    border-right: 50px solid transparent;
+    border-right: 6ch solid transparent;
 }
 
 .timeInfoTipBar,
@@ -49,6 +49,10 @@
 .timeInfoTipCell.elapsedTime {
     text-align: right;
     padding-right: 8px;
+}
+
+.perfTimingBarLabel {
+    color: black;
 }
 
 /*************************************************************************************************/
