--- a/extension/skin/classic/win/panel.css
+++ b/extension/skin/classic/win/panel.css
@@ -60,9 +60,9 @@
 }
 
 .closeButton:hover {
-    filter: url(chrome://firebug/skin/filters.svg#darken);
+    filter: url(resource://firebugui/filters.svg#darken);
 }
 
 .closeButton:active {
-    filter: url(chrome://firebug/skin/filters.svg#deepDarken);
+    filter: url(resource://firebugui/filters.svg#deepDarken);
 }
