Initial changes for issue 5955 allowing to display selector groups

--- a/extension/skin/classic/mac/panel.css
+++ b/extension/skin/classic/mac/panel.css
@@ -12,6 +12,7 @@ body {
 /* Twisties */
 
 .twisty,
+.foldableGroup > .groupHeader > .twisty,
 .logRow-errorMessage .hasTwisty > .errorTitle,
 .logRow-log .objectBox-array.hasTwisty,
 .logRow-spy .spyHead .spyTitle,
@@ -29,6 +30,7 @@ body {
     background-position: 2px calc(0.5em - 3px);
 }
 
+.foldableGroup.opened > .groupHeader > .twisty,
 .logRow-errorMessage .hasTwisty.opened > .errorTitle,
 .logRow-log .objectBox-array.hasTwisty.opened,
 .logRow-spy.opened .spyHead .spyTitle,
