--- a/extension/skin/classic/panelbase.css
+++ b/extension/skin/classic/panelbase.css
@@ -246,14 +246,37 @@ code {
 }
 
 /************************************************************************************************/
+/* Groups */
 
-h1.groupHeader {
+.groupHeader {
+    position: relative;
     padding: 2px 4px;
     margin: 0 0 4px 0;
     border-top: 1px solid #CCCCCC;
     border-bottom: 1px solid #CCCCCC;
     background: #FFFFFF linear-gradient(to top, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.1) 60%, rgba(0, 0, 0, 0.05) 60%, transparent) repeat-x;
     font-size: inherit;
+}
+
+.foldableGroup {
+    border-spacing: 0;
+}
+
+.foldableGroup > .groupHeader {
+    cursor: pointer;
+    -moz-user-select: none;
+}
+
+.foldableGroup > .groupHeader > .groupLabel {
+    margin-left: 14px;
+}
+
+.foldableGroup > .groupContent {
+    display: none;
+}
+
+.foldableGroup.opened > .groupContent {
+    display: table;
 }
 
 /************************************************************************************************/
