--- a/extension/skin/classic/panel.css
+++ b/extension/skin/classic/panel.css
@@ -13,6 +13,7 @@
 @import "chrome://firebug/skin/callstack.css";
 @import "chrome://firebug/skin/layout.css";
 @import "chrome://firebug/skin/dom.css";
+@import "chrome://firebug/skin/selectors.css";
 @import "chrome://firebug/skin/performanceTiming.css";
 @import "chrome://firebug/skin/tableRep.css";
 @import "chrome://firebug-os/skin/panel.css";
