Added an info message when no groups are created and allowed to add several groups instead of always replacing the first one

--- a/extension/skin/classic/selectors.css
+++ b/extension/skin/classic/selectors.css
@@ -23,6 +23,12 @@
     overflow-y: scroll;
 }
 
+.selectorWarning {
+    font-size: 11px;
+    color: gray;
+    padding: 2px 0 0 1ex;
+}
+
 .cssElementsHeader {
     margin: 0;
 }
