Allow to remove the selector trials again

--- a/extension/skin/classic/selectors.css
+++ b/extension/skin/classic/selectors.css
@@ -32,3 +32,10 @@
 .cssElementsHeader {
     margin: 0;
 }
+
+.selectorGroupRemoveButton
+{
+    position: absolute;
+    right: 3px;
+    top: 2px;
+}
