--- a/extension/skin/classic/panelbase.css
+++ b/extension/skin/classic/panelbase.css
@@ -167,15 +167,18 @@ code {
     border: 1px solid #a0a0a0 !important;
 }
 
-.inlineEditor[saveSuccess='true'] {
+.inlineEditor[saveSuccess='true'],
+.fixedWidthEditor[saveSuccess='true'] {
     box-shadow: 0 2px 6px rgba(0, 250, 0, 0.5);
 }
 
-.inlineEditor[saveSuccess='false'] {
+.inlineEditor[saveSuccess='false'],
+.fixedWidthEditor[saveSuccess='false'] {
     box-shadow: 0 2px 6px rgba(250, 0, 0, 0.5);
 }
 
-.inlineEditor[saveSuccess='almost'] {
+.inlineEditor[saveSuccess='almost'],
+.fixedWidthEditor[saveSuccess='almost'] {
     box-shadow: 0 2px 6px rgba(250, 250, 0, 0.8);
 }
 
