--- a/extension/skin/classic/selectors.css
+++ b/extension/skin/classic/selectors.css
@@ -26,7 +26,12 @@
 .selectorWarning {
     font-size: 11px;
     color: gray;
-    padding: 2px 0 0 1ex;
+    padding: 2px 1ex;
+}
+
+.selectorWarning.invalidSelector {
+    color: red;
+    background-color: #FFEBEB;
 }
 
 .cssElementsHeader {
@@ -38,4 +43,5 @@
     position: absolute;
     right: 3px;
     top: 2px;
+    cursor: auto;
 }
