Adjusted selector editor font

--- a/extension/skin/classic/selectors.css
+++ b/extension/skin/classic/selectors.css
@@ -17,6 +17,10 @@
     cursor: text;
 }
 
+.selectorsPanelEditor {
+    font-family: monospace !important;
+}
+
 .elementsGroups {
     position: relative;
     height: calc(100% - 18px);
