--- a/extension/skin/classic/mac/panel.css
+++ b/extension/skin/classic/mac/panel.css
@@ -143,6 +143,7 @@ body {
 }
 
 .closeButton {
+    display: inline-block;
     width: 13px;
     height: 13px;
     background: url(chrome://firebug/skin/mac/close.svg) no-repeat 0 0;
