--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -263,8 +263,16 @@
     padding-bottom: 2px;
 }
 
+.errorTitle.hasTooltip {
+    cursor: help;
+}
+
 .errorTrace {
+    color: black;
     margin-left: 17px;
+}
+
+.errorTrace .objectBox-stackFrame {
     color: blue;
 }
 
