Colour Max. Age and Expiry in cookie net info tab when server deletes cookie

--- a/extension/skin/classic/cookies/cookies.css
+++ b/extension/skin/classic/cookies/cookies.css
@@ -445,6 +445,11 @@
     border-bottom: 1px solid #EEEEEE;
 }
 
+.netInfoCookies .deletedCookie > .cookieExpiresCol,
+.netInfoCookies .deletedCookie > .cookieMaxAgeCol {
+    color: red;
+}
+
 .cookieInfoRow .cookieRowHeader {
     display: table-cell;
 }
