Better icons for 'toggle side panels' in 'vertical panels' mode (related to issue 6095)

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -490,3 +490,19 @@ textbox[type="fbSearchBox"] > panel {
 #fbToggleSidePanels.closed {
     list-style-image: url(chrome://firebug/skin/expandSidePanels.svg);
 }
+
+#fbPanelPane[orient="vertical"] #fbToggleSidePanels {
+    list-style-image: url(chrome://firebug/skin/collapseSidePanelsVertical.svg);
+}
+
+#fbPanelPane[orient="vertical"] #fbToggleSidePanels.closed {
+    list-style-image: url(chrome://firebug/skin/expandSidePanelsVertical.svg);
+}
+
+#fbToggleSidePanels:hover {
+    filter: url(resource://firebugui/filters.svg#darken);
+}
+
+#fbToggleSidePanels:active {
+    filter: url(resource://firebugui/filters.svg#deepDarken);
+}
