A little right margin for 'toggle side panels' button (related to issue 6095)

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -491,6 +491,10 @@ textbox[type="fbSearchBox"] > panel {
     list-style-image: url(chrome://firebug/skin/expandSidePanels.svg);
 }
 
+#fbPanelPane:not([orient="vertical"]) #fbToggleSidePanels {
+    margin-right: 2px;
+}
+
 #fbPanelPane[orient="vertical"] #fbToggleSidePanels {
     list-style-image: url(chrome://firebug/skin/collapseSidePanelsVertical.svg);
 }
