Issue 6583: 	Better UI for signalling the lack of stack traces due to disabled Script panel

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -272,6 +272,13 @@
     color: blue;
 }
 
+/* Used for a message explaining missing stack trace for an error log */
+.errorTrace .descriptionBox {
+    background-image: url(chrome://firebug/skin/info.svg);
+    background-repeat: no-repeat;
+    padding: 0 0 2px 20px;
+}
+
 .errorDuplication {
     margin-right: 5px;
     font-weight: bold;
