--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -61,12 +61,14 @@ textbox#fbCommandEditor {
 
 .fbCommandLineCompletionPanel {
     /* height: 270px; */
+    border: 1px solid #BEBEBE;
 }
 
 .fbCommandLineCompletions {
     cursor: default;
     font-family: monospace;
     white-space: pre;
+    background-color: white;
 }
 
 .fbPopupTitle {
@@ -75,6 +77,25 @@ textbox#fbCommandEditor {
     background-color: LightYellow;
     border-bottom: 1px solid #BEBEBE;
     color: #666666;
+}
+
+.fbPopupSeparator {
+    font-family: Lucida Grande, Tahoma, sans-serif;
+    padding: 2px 18px;
+    color: DarkGrey;
+    /*border-top: 1px solid #BEBEBE;
+    border-bottom: 1px solid #BEBEBE;*/
+    margin: 3px 0 3px 0;
+    background-color: rgb(243,243,243);
+}
+
+/* The first separator doesn't need margin-top */
+.fbPopupTitle + .fbPopupSeparator {
+    margin-top: 0;
+}
+
+.fbPopupEntry {
+    padding: 0 5px 0 5px;
 }
 
 .completionLine.apiCompletion {
